# kepler-formal

./: .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  ChangeLog  Makefile.am  NEWS  README.md  configure.ac  configure~
.github/workflows/: c-cpp.yml  macOS.yml  regress.yml
.reuse/: dep5
example/: README.md  edit.py  edit2.py
src/: CMakeLists.txt
src/clauses/: CMakeLists.txt  SNLLogicCloud.cpp  SNLLogicCloud.h  SNLTruthTableMerger.cpp  SNLTruthTableMerger.h  SNLTruthTableTree.cpp  SNLTruthTableTree.h  Tree2BoolExpr.cpp
src/formal/: BoolExpr.cpp  BoolExpr.h  BoolExprCache.cpp  BoolExprCache.h  CMakeLists.txt  CompressedBoolExpr.cpp  CompressedBoolExpr.h  SimpleSatSolver.cpp
src/strategies/: CMakeLists.txt
src/strategies/miter/: BuildPrimaryOutputClauses.cpp  BuildPrimaryOutputClauses.h  MiterStrategy.cpp  MiterStrategy.h
src/utils/: CMakeLists.txt  SNLLogicCone.cpp  SNLLogicCone.h
test/: CMakeLists.txt
test/strategies/miter/: CMakeLists.txt  MiterTests.cpp
test/utils/: CMakeLists.txt  SNLTruthTableTreeTests.cpp
